commit intermédiaire fonctions étape 2 before test upgrade node

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -42,5 +42,9 @@
   "historique": {
     "dataSource": "db",
     "public": true
+  },
+  "historiqueDeMouvement": {
+    "dataSource": "db",
+    "public": true
   }
 }
